--- a/wishlist_app/wishlist/templates/wishlist/item_confirm_delete.html
+++ b/wishlist_app/wishlist/templates/wishlist/item_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% comment %} {% extends 'home.html' %}
 {% block content %}
   <h2>Are you sure you want to delete "{{ item.title }}"?</h2>
   <form method="post">
@@ -6,4 +6,4 @@
     <button type="submit">Yes, delete</button>
     <a href="{% url 'wishlist:wishlist_detail' item.wishlist.pk %}">Cancel</a>
   </form>
-{% endblock %}
+{% endblock %} {% endcomment %}
