--- a/wishlist_app/accounts/templates/accounts/login.html
+++ b/wishlist_app/accounts/templates/accounts/login.html
@@ -1,30 +1,41 @@
 {% extends "home.html" %}
+{% load static %}
+
+{% block title %}
+    Login
+{% endblock %}
 
 {% block content %}
-    <h2>Login</h2>
+<div class="form-container">
+    <h2 class="form-title">Login</h2>
 
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert">{{ message }}</div>
+    <form class="form-with-validation" method="post" action="{% url 'accounts:login' %}">
+        {% csrf_token %}
+
+        <div class="form-group">
+            <label for="{{ form.username.id_for_label }}">Email:</label>
+            {{ form.username }}
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.password.id_for_label }}">Password:</label>
+            {{ form.password }}
+        </div>
+
+        {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <div class="alert">{{ error }}</div>
             {% endfor %}
         {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if form.errors %}
-        <ul>
-        {% for field, errors in form.errors.items %}
-            {% for error in errors %}
-                <li>{{ field }}: {{ error }}</li>
-            {% endfor %}
-        {% endfor %}
-        </ul>
-    {% endif %}
-        <button type="submit">Log In</button>
-    </form>
 
-    <p>Don't have an account?</p>
+        <p>
+            <button type="submit" class="btn-save">Login</button>
+        </p>
+    </form>
+    <hr>
+    <p class="form-note">Don't have an account?</p>
     <a href="{% url 'accounts:register' %}">
-        <button type="button" style="background-color:rgb(234, 128, 101)" class="butt">Register</button>
+        <button type="button" class="btn-back">Register</button>
     </a>
+</div>
 {% endblock %}
