--- a/wishlist_app/static/styles.css
+++ b/wishlist_app/static/styles.css
@@ -166,7 +166,7 @@ h1 {
 
 /* Кнопка видалення списку */
 #wishlistDeleteBtn {
-    background: #f44336;
+    background: #B22222;
     border: none;
     color: white;
     font-weight: bold;
@@ -177,7 +177,7 @@ h1 {
 }
 
 #wishlistDeleteBtn:hover {
-    background: #d32f2f;
+    background: #B22222;
 }
 
 /* Overlay для підтвердження видалення */
@@ -202,7 +202,7 @@ h1 {
     max-width: 400px;
     width: 90%;
     background: white;
-    border: 2px solid #f44336;
+    border: 2px solid #B22222;
     border-radius: 10px;
     padding: 20px 30px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.3);
@@ -234,21 +234,12 @@ h1 {
 }
 
 #deleteConfirm .buttons .delete-btn {
-    background: #f44336;
+    background: #B22222;
     color: white;
 }
 
 #deleteConfirm .buttons .delete-btn:hover {
-    background: #d32f2f;
-}
-
-#deleteConfirm .buttons .cancel-btn {
-    background: #e0e0e0;
-    color: #333;
-}
-
-#deleteConfirm .buttons .cancel-btn:hover {
-    background: #d5d5d5;
+    background: #B22222;
 }
 
 /* ВИПРАВЛЕНА модалка видалення елемента */
@@ -259,7 +250,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
-    border: 2px solid #f44336;
+    border: 2px solid #B22222;
     border-radius: 10px;
     padding: 20px 25px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.3);
@@ -287,7 +278,7 @@ h1 {
 }
 
 .item-delete-popup .delete-btn {
-    background: #f44336;
+    background: #B22222;
     color: white;
 }
 
@@ -295,14 +286,6 @@ h1 {
     background: #d32f2f;
 }
 
-.item-delete-popup .cancel-btn {
-    background: #e0e0e0;
-    color: #333;
-}
-
-.item-delete-popup .cancel-btn:hover {
-    background: #d5d5d5;
-}
 
 .wishlist-item.reserved {
     opacity: 0.6;
@@ -410,6 +393,7 @@ h1 {
 }
 
 .wishlist-card {
+    position: relative;
     background-color: #f5f5f5;
     border-radius: 8px;
     padding: 15px;
@@ -453,10 +437,382 @@ h1 {
     position: absolute;
     top: 5px;
     right: 5px;
-    background-color: rgba(0,0,0,0.6);
-    color: #fff;
+    background-color: rgba(255,255,255,0.9);
+    color: #000;
     padding: 5px 8px;
     border-radius: 50%;
     text-decoration: none;
     font-size: 14px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+}
+
+.create-wishlist-page {
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+/* Заголовок */
+.create-wishlist-page h1 {
+    text-align: center;
+    font-size: 28px;
+    color: #2c3e50;
+}
+
+/* Форма */
+.create-wishlist-page .wishlist-form input,
+.create-wishlist-page .wishlist-form textarea,
+.create-wishlist-page .wishlist-form select {
+    width: 100%;
+    padding: 15px 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+/* Кнопка Save */
+.btn-save {
+    background-color: #87CEFA;
+    color: #fff;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: none;
+    text-align: center;
+    border-radius: 6px;
+    cursor: pointer;
+    justify-content: space-between;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.btn-save:hover {
+    background-color: #3498db;;
+    transform: translateY(-2px);
+}
+
+/* Кнопка Back */
+.btn-back {
+    background-color: #33739d;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 6px;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+.btn-back:hover {
+    background-color: #3498db;
+    transform: translateY(-2px);
+}
+
+.create-wishlist-page p {
+    margin-top: 30px; /* відстань від форми до посилання */
+}
+
+.edit-item-page {
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.edit-item-form p {
+    margin-bottom: 20px;
+}
+
+.edit-item-form input,
+.edit-item-form textarea,
+.edit-item-form select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.form-buttons {
+    margin-top: 20px;
+    display: flex;
+    gap: 15px;
+}
+
+.edit-item-form label {
+    display: inline-block;
+    width: 120px; /* однакова ширина для всіх label */
+    font-weight: bold;
+    margin-right: 10px;
+    vertical-align: top;
+}
+
+
+/* спеціально для поля з картинкою */
+.edit-item-form input[type="file"] {
+    width: auto;
+    margin-bottom: 10px;
+}
+
+
+.form-group {
+    padding-top: 15px;
+}
+
+/* Додати для блоку Current + Clear */
+.current-image {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 5px;
+}
+
+.current-image img.image-preview {
+    max-height: 50px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.clear-image label {
+    margin-left: 5px;
+    cursor: pointer;
+}
+
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px 30px;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    z-index: 1001;
+}
+
+.modal .buttons {
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+    margin-top: 15px;
+}
+
+.confirm-btn {
+    padding: 5px 15px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.confirm-btn {
+    background-color: #B22222;
+    color: white;
+}
+
+.btn-cancel {
+    padding: 15px 20px;
+    color: #333;
+    background-color: #e0e0e0;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.2s, transform 0.2s;
+}
+
+.btn-cancel:hover {
+    background-color: #c2c2c2;
+    transform: translateY(-2px);
+}
+
+
+.profile-container {
+    margin: 30px auto;
+    background: rgba(255,255,255,0.85);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.profile-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.profile-photo {
+    /* text-align: center; */
+    margin-bottom: 20px;
+}
+
+.profile-img {
+    max-width: 200px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+
+.profile-info {
+    margin-bottom: 20px;
+    line-height: 1.6;
+}
+
+.profile-section {
+    margin: 15px 0;
+}
+
+.profile-section h3 {
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.profile-list {
+    list-style: none;
+    padding: 0;
+}
+
+.profile-list li {
+    background: #f5f5f5;
+    padding: 6px 10px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.large-input {
+    font-size: 1.2em;      /* більший текст */
+    padding: 10px 12px;    /* більше простору всередині інпуту */
+    width: 100%;           /* займає всю ширину батьківського контейнера */
+    box-sizing: border-box;
+}
+
+.form-group, .form-section {
+    margin-bottom: 20px;
+  }
+  label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 8px;
+  }
+  input[type="text"], textarea, input[type="file"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #bbb;
+    border-radius: 8px;
+    font-size: 16px;
+  }
+  .btn-primary {
+    background: #28a745;
+    color: white;
+    padding: 10px 18px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+  .btn-secondary {
+    background: #007bff;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 8px;
+  }
+  .custom-input {
+    display: flex;
+    margin-top: 6px;
+    gap: 6px;
+  }
+  .custom-input input {
+    flex: 1;
+  }
+  .remove-btn {
+    background: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 0 8px;
+    cursor: pointer;
+  }
+
+form input {
+    font-size: 1.2em;
+    padding: 10px 12px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.item-buttons {
+    margin-top: 20px;
+    display: flex;
+    gap: 15px; /* відстань між кнопками */
+}
+
+.btn-edit, .btn-delete {
+    padding: 15px 20px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.2s, transform 0.2s;
+}
+
+.btn-edit {
+    background-color: #33739d;
+}
+
+.btn-edit:hover {
+    background-color: #285a73;
+    transform: translateY(-2px);
+}
+
+.btn-delete {
+    background-color: #B22222;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.btn-delete:hover {
+    background-color: #7a1616;
+    transform: translateY(-2px);
+}
+
+.wishlist-img.reserved {
+    filter: grayscale(100%) brightness(0.6);
+    position: relative;
+}
+
+.reserved-label {
+    font-weight: bold;
+    color: #B22222;
+    font-size: 18px;
+}
+
+.reserved-overlay {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(128, 128, 128, 0.5);
+    z-index: 1;
+    border-radius: 8px;
+}
+
+.cancel-btn {
+    position: relative;
+    z-index: 2; /* кнопка над фоном */
+}
+
+.profile-img-small {
+    width: 60px;   /* ширина картинки */
+    height: 60px;  /* висота картинки */
+    border-radius: 50%; /* робимо круглою */
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.friend-profile {
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 8px;
+    max-width: 300px;
+    margin-bottom: 20px;
+    background-color: #f9f9f9;
 }
