--- a/wishlist_app/wishlist/templates/wishlist/friends_wishlists.html
+++ b/wishlist_app/wishlist/templates/wishlist/friends_wishlists.html
@@ -1,19 +1,20 @@
 {% extends 'home.html' %}
 {% load static %}
 {% block content %}
-<h2>Friends' Wishlists</h2>
-
-<ul>
-    <div class="wishlists-container">
+<h1>Friends Wishlists</h1>
+<div class="wishlists-container">
     {% for wishlist in wishlists %}
     <div class="wishlist-card">
-        <li>
-            <a href="{{ wishlist.get_absolute_url }}">
-                {{ wishlist.name }}
-            </a>
-        </li>
+        <a href="{{ wishlist.get_absolute_url }}">
+            <img src="{% static 'images/default-friends-wishlist.png' %}" alt="{{ wishlist.name }}" class="wishlist-card-img">
+            <h3 style="text-align: center;">{{ wishlist.name }}</h3>
+        </a>
+        <p style="text-align:center; font-size:14px; color:#555;">
+            Owned by: <strong>{{ wishlist.user.username }}</strong>
+        </p>
+    </div>
     {% empty %}
-        <li>No wishlists shared with you yet.</li>
+        <h3>No wishlists shared with you yet.</h3>
     {% endfor %}
-</ul>
+</div>
 {% endblock %}
