--- a/wishlist_app/wishlist/templates/wishlist/wishlist_form.html
+++ b/wishlist_app/wishlist/templates/wishlist/wishlist_form.html
@@ -1,13 +1,20 @@
 {% extends 'home.html' %}
+{% load static %}
 {% block content %}
 
 <h1>Create Wishlist</h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<div class="create-wishlist-page">
+    <form method="post" class="wishlist-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <div class="wishlist-form-buttons">
+            <button type="submit" class="btn-save">Save</button>
+        </div>
+    </form>
+    <p>
+        <a href="{% url 'wishlist:wishlist_list' %}" class="btn-back">Back to wishlists</a>
+    </p>
+</div>
 
-<a href="{% url 'wishlist:wishlist_list' %}">Back to wishlists</a>
 {% endblock %}
