--- a/wishlist_app/wishlist/templates/wishlist/wishlist_list.html
+++ b/wishlist_app/wishlist/templates/wishlist/wishlist_list.html
@@ -3,27 +3,25 @@
 {% block content %}
 <div>
     <h1>My Wishlists</h1>
-
-    <!-- Кнопка створення нового вішліста -->
-    <a href="{% url 'wishlist:wishlist_create' %}" class="add-wishlist-button" 
-       style="display: inline-block; margin-bottom: 20px; padding: 10px 15px; background-color: #2c3e50; color: #fff; text-decoration: none; border-radius: 5px;">
-       ＋ Create new wishlist
-    </a>
-
     <div class="wishlists-container">
-        {% for wishlist in wishlists %}
-        <div class="wishlist-card">
-            <a href="{% url 'wishlist:wishlist_edit_image' wishlist.pk %}" class="edit-image-btn">✎</a>
-            <a href="{% url 'wishlist:wishlist_detail' wishlist.pk %}">
-                {% if wishlist.image %}
-                    <img src="{{ wishlist.image.url }}" alt="{{ wishlist.name }}" class="wishlist-card-img">
-                {% else %}
-                    <img src="{% static 'images/default-wishlist.png' %}" alt="{{ wishlist.name }}" class="wishlist-card-img">
-                {% endif %}
-                <h3>{{ wishlist.name }}</h3>
-                <p>Created at: {{ wishlist.created_at|date:"d M Y" }}</p>
+            <!-- New wishlist creation button-->
+            <a href="{% url 'wishlist:wishlist_create' %}" class="wishlist-card">
+                <img src="{% static 'images/default-wishlist.png' %}" alt="{{ wishlist.name }}" class="wishlist-card-img" style="width: 180px; height: auto; border-radius: 5px;">
+                <h3 style="text-align: center; margin-top: 30px">＋ Create new wishlist</h3>
             </a>
-        </div>
+        {% for wishlist in wishlists %}
+            <div class="wishlist-card">
+                <a href="{% url 'wishlist:wishlist_edit_image' wishlist.pk %}" class="edit-image-btn">✎</a>
+                <a href="{% url 'wishlist:wishlist_detail' wishlist.pk %}">
+                    {% if wishlist.image %}
+                        <img src="{{ wishlist.image.url }}" alt="{{ wishlist.name }}" class="wishlist-card-img">
+                    {% else %}
+                        <img src="{% static 'images/default-wishlist.png' %}" alt="{{ wishlist.name }}" class="wishlist-card-img">
+                    {% endif %}
+                    <h3>{{ wishlist.name }}</h3>
+                    <p>Created at: {{ wishlist.created_at|date:"d M Y" }}</p>
+                </a>
+            </div>
     {% empty %}
         <p>No wishlists yet.</p>
     {% endfor %}
